<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/personFirstName" />

            <TextView
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personFirstPlaceholer" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#808080" />
            <TextView
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:id="@+id/lastname"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personLastName" />

            <TextView
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personLastPlaceholer"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="49dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#808080" />

            <TextView
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:id="@+id/personGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personGender" />

            <TextView
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personGenderPlaceholer"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="49dp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#808080" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


      <!--  <TextView
            android:id="@+id/listTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
            android:paddingTop="10dp"
            android:paddingEnd="?android:attr/expandableListPreferredItemPaddingLeft"
            android:paddingBottom="10dp"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Life Events" /> -->


    </LinearLayout>

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:dividerHeight="0.5dp"
        android:divider="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        tools:context=".PersonActivity"/>
    </LinearLayout>

</RelativeLayout>